# app/controllers/transactions_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from app.models.request_transaction import RequestTransaction  # noqa: E501
 from app.models.transaction import Transaction  # noqa: E501
 from app import util
 
@@ -18,7 +19,7 @@ def add_transaction(account_id, body=None):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        body = object.from_dict(connexion.request.get_json())  # noqa: E501
+        body = RequestTransaction.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
