# app/controllers/users_controller.py
@@ -1,23 +1,23 @@
 import connexion
 import six
 
+from app.models.request_user import RequestUser  # noqa: E501
 from app.models.user import User  # noqa: E501
 from app import util
 
 
-def add_user(body=None):  # noqa: E501
+def add_user(body):  # noqa: E501
     """Add a new admin user
 
      # noqa: E501
 
-    :param body: 
+    :param body: User data to create
     :type body: dict | bytes
 
     :rtype: User
     """
     if connexion.request.is_json:
-        body = User.from_dict(connexion.request.get_json())  # noqa: E501
-        print(body)
+        body = RequestUser.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
