# app/models/__init__.py
@@ -8,5 +8,10 @@ from app.models.address import Address
 from app.models.auth import Auth
 from app.models.bank_card import BankCard
 from app.models.customer import Customer
+from app.models.request_account import RequestAccount
+from app.models.request_auth import RequestAuth
+from app.models.request_customer import RequestCustomer
+from app.models.request_transaction import RequestTransaction
+from app.models.request_user import RequestUser
 from app.models.transaction import Transaction
 from app.models.user import User
