# app/models/request_auth.py
@@ -1,0 +1,93 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from app.models.base_model_ import Model
+import re  # noqa: F401,E501
+from app import util
+
+
+class RequestAuth(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, password: str=None):  # noqa: E501
+        """RequestAuth - a model defined in Swagger
+
+        :param username: The username of this RequestAuth.  # noqa: E501
+        :type username: str
+        :param password: The password of this RequestAuth.  # noqa: E501
+        :type password: str
+        """
+        self.swagger_types = {
+            'username': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'password': 'password'
+        }
+        self._username = username
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RequestAuth':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The RequestAuth of this RequestAuth.  # noqa: E501
+        :rtype: RequestAuth
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this RequestAuth.
+
+
+        :return: The username of this RequestAuth.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this RequestAuth.
+
+
+        :param username: The username of this RequestAuth.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this RequestAuth.
+
+
+        :return: The password of this RequestAuth.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this RequestAuth.
+
+
+        :param password: The password of this RequestAuth.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
