# app/swagger/swagger.yaml
@@ -13,7 +13,8 @@ externalDocs:
   description: Find out more about UiBank
   url: https://github.com/AndreiBarbuOz/uibank-api-server
 servers:
-- url: http://localhost
+- url: https://virtserver.swaggerhub.com/AndreiBarbuOz/ui-bank/1.0.0
+  description: SwaggerHub API Auto Mocking
 security:
 - bearerAuth: []
 tags:
@@ -40,7 +41,12 @@ paths:
       summary: Add a new customer
       operationId: add_customer
       requestBody:
-        $ref: '#/components/requestBodies/Customer'
+        description: Pet object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestCustomer'
+        required: true
       responses:
         "201":
           description: Created
@@ -98,7 +104,12 @@ paths:
           type: integer
           format: int64
       requestBody:
-        $ref: '#/components/requestBodies/Customer'
+        description: Pet object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestCustomer'
+        required: true
       responses:
         "201":
           description: Updated
@@ -220,7 +231,12 @@ paths:
           type: integer
           format: int64
       requestBody:
-        $ref: '#/components/requestBodies/Account'
+        description: List of user object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestAccount'
+        required: true
       responses:
         "201":
           description: Created
@@ -338,7 +354,10 @@ paths:
           type: integer
           format: int64
       requestBody:
-        $ref: '#/components/requestBodies/Transaction'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestTransaction'
       responses:
         "201":
           description: Created
@@ -380,8 +399,8 @@ paths:
     post:
       tags:
       - cards
-      summary: Return all bank cards for an account
-      description: Return all cards for the specified account
+      summary: Add a new bank card for an account
+      description: Add a new card for the specified account
       operationId: add_bank_card
       parameters:
       - name: accountId
@@ -394,7 +413,12 @@ paths:
           type: integer
           format: int64
       requestBody:
-        $ref: '#/components/requestBodies/BankCard'
+        description: Bank card details
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BankCard'
+        required: true
       responses:
         "200":
           description: OK
@@ -470,7 +494,12 @@ paths:
       summary: Add a new admin user
       operationId: add_user
       requestBody:
-        $ref: '#/components/requestBodies/User'
+        description: User data to create
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestUser'
+        required: true
       responses:
         "201":
           description: Created
@@ -521,7 +550,12 @@ paths:
         calls for resources
       operationId: auth
       requestBody:
-        $ref: '#/components/requestBodies/Auth'
+        description: Request body to perform authentication
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestAuth'
+        required: true
       responses:
         "200":
           description: Success
@@ -622,6 +656,67 @@ components:
         employment_status: permanent
         first_name: John
         email: john.doe@uibank.com
+    RequestCustomer:
+      required:
+      - date_of_birth
+      - email
+      - employment_status
+      - first_name
+      - gender
+      - last_name
+      - plain_password
+      - title
+      type: object
+      properties:
+        first_name:
+          type: string
+          example: John
+        last_name:
+          type: string
+          example: Doe
+        middle_name:
+          type: string
+        title:
+          type: string
+          description: Title of customer
+          example: mr
+          enum:
+          - mr
+          - mrs
+          - miss
+          - ms
+          - doc
+        gender:
+          type: string
+          description: Gender of customer
+          enum:
+          - male
+          - female
+        email:
+          type: string
+          format: email
+          example: john.doe@uibank.com
+        date_of_birth:
+          type: string
+          format: date
+        employment_status:
+          type: string
+          enum:
+          - permanent
+          - unemployed
+          - consultant
+        residence_status:
+          type: string
+          enum:
+          - resident
+          - foreigner
+        addresses:
+          type: array
+          items:
+            $ref: '#/components/schemas/Address'
+        plain_password:
+          type: string
+          format: password
     Account:
       type: object
       properties:
@@ -637,7 +732,7 @@ components:
         friendly_name:
           type: string
           example: Debit account
-        type:
+        account_type:
           type: string
           enum:
           - checking
@@ -659,11 +754,29 @@ components:
         customer_url: /customers/654321
         date_start: 1
         friendly_name: Debit account
+        account_type: checking
         balance: 5.962134
         cards_url: /accounts/12345/cards
         id: 0
-        type: checking
         self_url: /accounts/12345
+    RequestAccount:
+      required:
+      - account_type
+      - date_start
+      - friendly_name
+      type: object
+      properties:
+        date_start:
+          type: integer
+          format: date
+        friendly_name:
+          type: string
+          example: Debit account
+        account_type:
+          type: string
+          enum:
+          - checking
+          - savings
     Transaction:
       required:
       - account_url
@@ -725,6 +838,29 @@ components:
         id: 0
         transaction_type: debit
         self_url: /transactions/12345
+    RequestTransaction:
+      required:
+      - account
+      - amount
+      - description
+      - transaction_type
+      type: object
+      properties:
+        amount:
+          type: number
+          format: float
+        transaction_type:
+          type: string
+          description: Transaction type
+          enum:
+          - debit
+          - credit
+        description:
+          type: string
+          example: return loan
+        account:
+          type: string
+          example: "1001001234"
     Address:
       type: object
       properties:
@@ -834,6 +970,31 @@ components:
         self_url: /users/123456
         username: SiteAdmin
         email_canonical: admin@uibank.com
+    RequestUser:
+      required:
+      - email
+      - plain_password
+      - username
+      type: object
+      properties:
+        username:
+          pattern: '[a-zA-Z][a-zA-Z0-9_-]{6,50}'
+          type: string
+          example: admin
+        plain_password:
+          type: string
+          format: password
+          example: fie8T3m0!fvA
+        email:
+          type: string
+          format: email
+          example: admin@uibank.com
+        first_name:
+          type: string
+          example: John
+        last_name:
+          type: string
+          example: Admin
     Auth:
       type: object
       properties:
@@ -848,173 +1009,23 @@ components:
         access_token: access_token
         token_type: token_type
         expires_in: 0
+    RequestAuth:
+      required:
+      - password
+      - username
+      type: object
+      properties:
+        username:
+          pattern: '[a-zA-Z][a-zA-Z0-9_-]{6,50}'
+          type: string
+          example: admin
+        password:
+          type: string
+          format: password
+          example: fie8T3m0!fvA
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
-  requestBodies:
-    Customer:
-      description: Pet object that needs to be added to the store
-      content:
-        application/json:
-          schema:
-            required:
-            - date_of_birth
-            - email
-            - employment_status
-            - first_name
-            - gender
-            - last_name
-            - password
-            - title
-            type: object
-            properties:
-              first_name:
-                type: string
-                example: John
-              last_name:
-                type: string
-                example: Doe
-              middle_name:
-                type: string
-              title:
-                type: string
-                description: Title of customer
-                example: mr
-                enum:
-                - mr
-                - mrs
-                - miss
-                - ms
-                - doc
-              gender:
-                type: string
-                description: Gender of customer
-                enum:
-                - male
-                - female
-              email:
-                type: string
-                format: email
-                example: john.doe@uibank.com
-              date_of_birth:
-                type: string
-                format: date
-              employment_status:
-                type: string
-                enum:
-                - permanent
-                - unemployed
-                - consultant
-              residence_status:
-                type: string
-                enum:
-                - resident
-                - foreigner
-              addresses:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Address'
-              plain_password:
-                type: string
-                format: password
-      required: true
-    Account:
-      description: List of user object
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              date_start:
-                type: integer
-                format: date
-              friendly_name:
-                type: string
-                example: Debit account
-              type:
-                type: string
-                enum:
-                - checking
-                - savings
-      required: true
-    BankCard:
-      description: Bank card details
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/BankCard'
-      required: true
-    Transaction:
-      content:
-        application/json:
-          schema:
-            required:
-            - account
-            - amount
-            - description
-            - transaction_type
-            type: object
-            properties:
-              amount:
-                type: number
-                format: float
-              transaction_type:
-                type: string
-                description: Transaction type
-                enum:
-                - debit
-                - credit
-              description:
-                type: string
-                example: return loan
-              account:
-                type: string
-                example: "1001001234"
-    User:
-      content:
-        application/json:
-          schema:
-            required:
-            - email
-            - plain_password
-            - username
-            type: object
-            properties:
-              username:
-                pattern: '[a-zA-Z][a-zA-Z0-9_-]{6,50}'
-                type: string
-                example: admin
-              plain_password:
-                type: string
-                format: password
-                example: fie8T3m0!fvA
-              email:
-                type: string
-                format: email
-                example: admin@uibank.com
-              first_name:
-                type: string
-                example: John
-              last_name:
-                type: string
-                example: Admin
-    Auth:
-      content:
-        application/json:
-          schema:
-            required:
-            - password
-            - username
-            type: object
-            properties:
-              username:
-                pattern: '[a-zA-Z][a-zA-Z0-9_-]{6,50}'
-                type: string
-                example: admin
-              password:
-                type: string
-                format: password
-                example: fie8T3m0!fvA
   securitySchemes:
     bearerAuth:
       type: http
